<resources>
    <string name="app_name">Mi agenda FP</string>
    <string name="version_num" translatable="false">1.0.1</string>
    <string name="title_dialog_conexion">Error de conexión</string>
    <string name="info_conexion">¡Vaya, parece que no tienes conexión a internet! Mi agenda FP necesita una conexión a
    internet para poder funcionar correctamente.</string>
    <string name="title_activity_login">Inicio de sesión</string>
    <string name="hint_nombre_usuario">Nombre de usuario</string>
    <string name="hint_clave">Contraseña</string>
    <string name="btn_iniciar_sesion">Iniciar sesión</string>
    <string name="btn_registrar_usuario">¿Aún no tienes cuenta? Registrarse</string>
    <string name="btn_registrarse">Registrarse</string>
    <string name="btn_recuperar_clave">He olvidado mis datos de usuario :(</string>
    <string name="btn_desbloquear_cuenta">Desbloquear mi cuenta</string>
    <string name="dialog_desbloqueo_title">Código enviado</string>
    <string name="dialog_desbloqueo">Se ha enviado un código de desbloqueo al correo obtenido del usuario. Por favor,
    revisa tu bandeja de entrada e introduce el código para desbloquear tu cuenta.</string>
    <string name="text_introducir_codigo">Código de desbloqueo</string>
    <string name="validar_codigo">VALIDAR CÓDIGO</string>
    <string name="enviar_codigo_desbloqueo">Enviar código de desbloqueo</string>
    <string name="error_introducir_codigo">Debes introducir el código que se te ha enviado al correo.</string>
    <string name="usuario_desbloqueado">Usuario desbloqueado. Ya puedes iniciar sesión :)</string>
    <string name="error_codigo_desbloqueo_expirado">El código ha expirado. Solicita otro nuevo.</string>
    <string name="title_activity_registro_usuario">Registro</string>
    <string name="sNombre">Nombre</string>
    <string name="sApe_uno">Apellidos</string>
    <string name="sApe_dos">Segundo apellido</string>
    <string name="sProvincia">Provincia</string>
    <string name="sLocalidad">Localidad</string>
    <string name="sCentro_estudios">Centro de estudios</string>
    <string name="sCiclo">Ciclo formativo</string>
    <string name="sHorasFct">Horas FCT</string>
    <string name="sCentro_practicas">Centro de prácticas</string>
    <string name="sCorreo">Correo electrónico</string>
    <string name="sNombreUsuario">Usuario (entre 6 y 20 caracteres)</string>
    <string name="sClave">Contraseña (entre 8 y 20 caracteres)</string>
    <string name="sClave2">Repite la contraseña</string>
    <string name="sFamiliaCiclo">Familia del ciclo formativo</string>
    <string name="error_seleccionar_provincia">Debes seleccionar una provincia.</string>
    <string name="error_seleccionar_familia_ciclo">Debes seleccionar una familia de ciclos formativos.</string>
    <string name="error_seleccionar_ciclo">Debes seleccionar un ciclo formativo.</string>
    <string name="error_apellidos_invalidos">No se pueden introducir números ni caracteres especiales salvo acentuaciones en los apellidos.</string>
    <string name="error_datos_invalidos_formato">No se pueden introducir números ni caracteres especiales salvo acentuaciones.</string>
    <string name="title_dialog_registro_correcto">¡Registro (casi) completado!</string>
    <string name="text_dialog_registro_correcto">Se ha enviado un código de confirmación a tu correo para poder completar el registro. Por favor, revisa
        tu bandeja de entrada.
    </string>
    <string name="registro_completo">¡Registro completado!</string>
    <string name="registro_completo_msg">Se ha registrado correctamente el usuario.</string>
    <string name="btn_aceptar_confirm">Confirmar registro</string>
    <string name="text_dialog_confirm">No se ha confirmado el registro de este usuario. Por favor, introduce el código de confirmación que se te ha enviado.</string>
    <string name="btn_aceptar">Aceptar</string>
    <string name="btn_cancelar">Cancelar</string>
    <string name="title_activity_confirma_registro">Confirmación de registro</string>
    <string name="hint_codigo_confirmacion">Código de confirmación</string>
    <string name="btn_confirmar">Confirmar registro</string>
    <string name="btn_reenviar_codigo">Reenviar código de confirmación</string>
    <string name="error_correo_no_coincide">El correo introducido no es correcto.</string>
    <string name="dialog_confirmacion_correcta">¡Usuario confirmado! Ya puedes iniciar sesión.</string>
    <string name="tv_correo_a_confirmar">Cuenta de usuario a activar:</string>
    <string name="codigo_reenviado">Código enviado. Revisa tu bandeja de entrada.</string>
    <string name="info_reenvio_codigo">Introduce el correo electrónico con el que estés registrado y se te enviará
    a esa dirección un código nuevo para que puedas confirmar tu registro de usuario.</string>
    <string name="title_activity_reenvia_codigo">Reenviar código de confirmación</string>
    <string name="hint_reenviar_correo">Correo electrónico</string>
    <string name="btn_enviar">Enviar código</string>
    <string name="title_activity_nav_menu">NavMenu</string>
    <string name="dialog_codigo_reenviado">Código enviado</string>
    <string name="dialog_mensaje_codigo_reenviado">Se ha enviado un nuevo código de confirmación. Revisa tu bandeja de entrada.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_recuperar_datos">Recuperar datos usuario</string>
    <string name="btn_clave_nueva">Solicitar contraseña nueva</string>
    <string name="btn_recupera_usuario">Recordar nombre de usuario</string>
    <string name="title_dialog_recuperar_clave">Contraseña enviada</string>
    <string name="txt_dialog_recuperar_clave">Se ha enviado un correo con la contraseña nueva a la dirección de correo electrónico del usuario introducida. Revisa tu bandeja de entrada.</string>
    <string name="title_dialog_recuperar_usuario">Nombre de usuario enviado</string>
    <string name="txt_dialog_recuperar_usuario">Se ha enviado el nombre de usuario a la dirección de correo electrónico de usuario introducida. Revisa tu bandeja de entrada.</string>
    <string name="opc_inicio">Inicio</string>
    <string name="opc_diario">Diario</string>
    <string name="opc_horas">Horas</string>
    <string name="opc_recursos">Recursos</string>
    <string name="opc_proyecto">Proyecto</string>
    <string name="opc_ideas_proyecto">Ideas</string>
    <string name="opc_guia_proyecto">Guía de proyecto</string>
    <string name="opc_guia_anteproyecto">Guía de anteproyecto</string>
    <string name="opc_cerrar_sesion">Cerrar sesión</string>
    <string name="opc_contacto">Contacto</string>
    <string name="opc_anotaciones">Notas</string>
    <string name="opc_perfil">Mi perfil</string>
    <string name="opc_contactos">Contactos de interés</string>
    <string name="nombre_usuario_menu">Nombre de usuario</string>
    <string name="correo_usuario_menu">Correo electrónico</string>
    <string name="enviar_sugerencias">Enviar sugerencias</string>
    <string name="ver_mi_calendario">Mi calendario escolar</string>
    <string name="ver_otras_comunidades">Calendarios de otras comunidades</string>
    <string name="ver_paginas_recomendadas">Páginas recomendadas</string>
    <string name="info">Info</string>
    <string name="copiar_portapapeles">Copiar dirección de enlace</string>
    <string name="copiado">Dirección copiada al portapapeles</string>
    <string name="info_webview">Es posible que la descarga o visualización de determinados contenidos no se lleve a cabo correctamente en la navegación interna al visualizar los calendarios.
    Si deseas visualizar o descargar algún contenido puedes copiar la url de la página de origen del mismo a través del icono de los rectángulos en la barra superior, y después
    copiar dicha url en el navegador de tu teléfono.</string>
    <string name="btn_entendido">Entendido</string>
    <string name="title_activity_acerca_de">Acerca de</string>
    <string name="acerca_de">Mi agenda FP se ampara en la Ley Orgánica 2/2006 de 3 de mayo de Educación del Ministerio de Educación, Cultura y Deporte
        de España para proporcionar el listado de ciclos formativos y sus familias de origen, así como para establecer un valor de referencia para el cómputo
        máximo de horas permitidas a cursar en el módulo de prácticas en centros de trabajo (en adelante FCT). Si tienes cualquier problema no dudes en contactar con el soporte mediante el correo
        de contacto que se indica arriba arriba.
        La app está abierta a ideas nuevas y cambios siempre que sea para mejorar, ya sea a la propia aplicación o a la experiencia de uso de ella. Si 
        tienes alguna idea para mejorar su aspecto o cualquier otra mejora, puedes sugerirlo a través del
        correo electrónico de soporte ya mencionado. Tu solicitud recibirá respuesta lo más pronto posible. ¡Gracias!
        </string>
    <string name="creditos"></string>
    <string name="version">Versión:</string>
    <string name="contacto">Soporte:</string>
    <string name="correo_soporte">soportemiagendafp@gmail.com</string>
    <string name="dialog_cargando">Cargando</string>
    <string name="dialog_comprueba_datos">Comprobando datos. Por favor, espera un momento.</string>
    <string name="menu_guardar">Guardar</string>
    <string name="menu_info">Info</string>
    <string name="menu_nuevo">Nuevo</string>
    <string name="menu_editar">Editar</string>
    <string name="menu_contacto">Contacto</string>
    <string name="menu_acerca_de">Acerca de...</string>
    <string name="menu_borrar">Borrar</string>
    <string name="action_settings">Ajustes</string>
    <string name="error_modulo_fct_completado">No puedes crear más registros porque ya has cursado todas las horas del módulo FCT.</string>
    <string name="texto_diario_vacio">¡Vaya, parece que no has añadido ningún registro todavía! Pulsa el botón circular de abajo para crear un registro nuevo.</string>
    <string name="menu_estadisticas_registros_diario">Estadísticas</string>
    <string name="alert_no_hay_registros">No puedes realizar ninguna búsqueda porque aún no has creado ningún registro.</string>
    <string name="menu_buqueda_registros">Buscar registros</string>
    <string name="menu_borrar_todo">Borrar todos los registros</string>
    <string name="menu_ordenar_registros">Ordenar registros...</string>
    <string name="selector_orden_registros_mas_recientes">Más recientes primero</string>
    <string name="selector_orden_registros_menos_recientes">Menos recientes primero</string>
    <string name="alert_borrar_todo_title">Borrar todo</string>
    <string name="alert_borrar_todo">¿Estás seguro de que deseas borrar todos los registros de tu diario? Esta acción
    no se podrá deshacer.</string>
    <string name="alert_borrar_todo_btn_borrar">Borrar</string>
    <string name="registros_borrados">Registros del diario borrados correctamente</string>
    <string name="no_hay_registros">No hay registros que borrar.</string>
    <string name="menu_borrar_seleccion">Borrar elementos seleccionados</string>
    <string name="opc_crear_aviso_horas_fct">Aviso de horas FCT restantes...</string>
    <string name="aviso_on_off">Aviso de horas FCT restantes</string>
    <string name="txt_horas_fct_restantes">Avísame cuando me queden menos de las siguientes horas para terminar el módulo FCT: </string>
    <string name="opc_actualizar_perfil">Actualizar perfil</string>
    <string name="opc_refrescar_datos">Refrescar datos</string>
    <string name="txt_instrucciones_recuperar_clave">Introduce el correo electrónico con el que estés registrado para recuperar tus datos
    de usuario. Por motivos de seguridad no podemos recuperar tu clave, pero puedes solicitar una nueva que podrás cambiar después en
    tu perfil de usuario.</string>
    <string name="menu_color">Seleccionar color...</string>
</resources>