<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_color"
        android:icon="@drawable/ic_color_lens_black_24dp"
        android:title="@string/menu_color"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_editar"
        android:icon="@drawable/ic_create_black_24dp"
        android:title="@string/menu_editar"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_borrar"
        android:icon="@drawable/ic_delete_white_24dp"
        android:title="@string/menu_borrar"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_guardar"
        android:icon="@drawable/ic_save_black_24dp"
        android:title="@string/menu_guardar"
        android:visible="false"
        app:showAsAction="ifRoom" />
</menu>