<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="es.proyecto.eva.miagendadam.RecuperarDatosUsuario">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="start"
            android:text="@string/txt_instrucciones_recuperar_clave"
            android:textAlignment="viewStart"
            android:textSize="12sp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txt_nombre_usuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sCorreo" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_enviar_nueva_clave"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_clave_nueva"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_enviar_nombre_usuario"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_recupera_usuario"
            android:textStyle="bold" />


    </LinearLayout>
</android.support.constraint.ConstraintLayout>
