<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="es.proyecto.eva.miagendadam.RegistroNuevoUsuario">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/form_registro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/editText_nombre"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ems="10"
                            android:fontFamily="@font/roboto_light"
                            android:hint="@string/sNombre"
                            android:inputType="textCapWords|textPersonName"
                            android:maxLength="20" />

                        <EditText
                            android:id="@+id/editText_ape_uno"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ems="10"
                            android:hint="@string/sApe_uno"
                            android:fontFamily="@font/roboto_light"
                            android:inputType="textCapWords|textPersonName"
                            android:maxLength="50" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/textView10"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:fontFamily="@font/roboto_light"
                                android:text="@string/sProvincia" />

                            <Spinner
                                android:id="@+id/spinner_provincia"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:spinnerMode="dialog" />
                        </LinearLayout>

                        <EditText
                            android:id="@+id/editText_horas_fct"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ems="10"
                            android:hint="@string/sHorasFct"
                            android:fontFamily="@font/roboto_light"
                            android:inputType="number"
                            android:maxLength="3" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/editText_centro_estudios"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ems="10"
                            android:fontFamily="@font/roboto_light"
                            android:hint="@string/sCentro_estudios"
                            android:inputType="textCapSentences|textPersonName"
                            android:maxLength="50" />

                        <EditText
                            android:id="@+id/editText_centro_practicas"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ems="10"
                            android:fontFamily="@font/roboto_light"
                            android:hint="@string/sCentro_practicas"
                            android:inputType="textCapSentences|textPersonName"
                            android:maxLength="50" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/textView_familia_ciclo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto_light"
                        android:text="@string/sFamiliaCiclo" />

                    <Spinner
                        android:id="@+id/spinner_familias_ciclo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="left"
                        android:spinnerMode="dialog" />

                    <TextView
                        android:id="@+id/textView_ciclo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto_light"
                        android:text="@string/sCiclo" />

                    <Spinner
                        android:id="@+id/spinner_ciclo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:spinnerMode="dialog" />

                    <EditText
                        android:id="@+id/editText_correo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:fontFamily="@font/roboto_light"
                        android:hint="@string/sCorreo"
                        android:inputType="textEmailAddress"
                        android:maxLength="100" />

                    <EditText
                        android:id="@+id/editText_nombre_usuario"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:fontFamily="@font/roboto_light"
                        android:hint="@string/sNombreUsuario"
                        android:inputType="textPersonName"
                        android:maxLength="20" />

                    <EditText
                        android:id="@+id/editText_clave"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:fontFamily="@font/roboto_light"
                        android:hint="@string/sClave"
                        android:inputType="textPassword"
                        android:maxLength="20" />

                    <EditText
                        android:id="@+id/editText_confirma_clave"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:fontFamily="@font/roboto_light"
                        android:hint="@string/sClave2"
                        android:inputType="textPassword"
                        android:maxLength="20" />

                    <Button
                        android:id="@+id/btn_registrar_usuario"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/colorAccent"
                        android:fontFamily="@font/roboto_light"
                        android:onClick="registro"
                        android:text="@string/btn_registrarse"
                        android:textColor="@android:color/background_light"
                        android:textStyle="bold" />

                </LinearLayout>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
