<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/crear_aviso_horas_fct"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <Switch
        android:id="@+id/switch_ver_aviso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/roboto_light"
        android:text="@string/aviso_on_off"
        android:textColor="@color/azul_barra_notificaciones"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/capa_horas"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_light"
            android:text="@string/txt_horas_fct_restantes" />

        <EditText
            android:id="@+id/txt_horas_aviso"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="right"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_aceptar_aviso"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_light"
            android:text="@string/btn_aceptar"
            android:textColor="@color/azul_barra_notificaciones"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>